k8s/jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carmen-jaeger-deployment
  labels:
    app: carmen-jaeger
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: carmen-jaeger
  template:
    metadata:
      labels:
        app: carmen-jaeger
    spec:
      volumes:
      - name: data-store
        persistentVolumeClaim:
          claimName: pvc-carmen-jaeger
      - name: carmen-volume
        emptyDir: {}
      - name: configmap-volume
        configMap:
          name: carmen-jaeger-cm
          defaultMode: 0777 ## but still write-protected :-(
      containers:
        - name: carmen-jaeger
          imagePullPolicy: Always
          livenessProbe:
           httpGet:
             path: /
             port: 16686
             scheme: HTTP
           initialDelaySeconds: 19
           periodSeconds: 30
           failureThreshold: 6
           successThreshold: 1
           timeoutSeconds: 5
          readinessProbe:
           httpGet:
             path: /
             port: 16686
             scheme: HTTP
           initialDelaySeconds: 19
           periodSeconds: 32
           failureThreshold: 11
           successThreshold: 1
           timeoutSeconds: 5
          image: dont_use_directly_but_through_an_environment_overlay
          ports:
          - name: frontend
            containerPort: 16686
            protocol: TCP          
          - name: tcpjaegerthrift
            containerPort: 14268
            protocol: TCP
          - name: tcpmodelproto
            containerPort: 14250
            protocol: TCP
          command: ["/bin/sh","-c"]
          args:
            - >
              /go/bin/all-in-one-linux
              --log-level=debug
#              while true; do echo ready_to_login; sleep 59;done
          volumeMounts:
          - mountPath: /carmen
            name: carmen-volume
          - name: configmap-volume
            mountPath: /config
          resources:
            limits:
              cpu: "300m"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "200Mi"
