k8s/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-carmen-jaeger
  labels:
    app: carmen-jaeger
spec:
  selector:
    app: carmen-jaeger
  sessionAffinity: None
  type: ClusterIP
  ports:
    - name: frontend
      protocol: TCP
      port: 16686
      targetPort: 16686
    - name: tcpjaegerthrift
      protocol: TCP
      port: 14268
      targetPort: 14268
    - name: tcpmodelproto
      protocol: TCP
      port: 14250
      targetPort: 14250
