k8s/jaeger/route_http.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 25500ms
  labels:
    app: jaeger
  name: jaeger
spec:
  host: jaeger-thetom42-dev.apps.sandbox.x8i5.p1.openshiftapps.com
  port:
    targetPort: frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: jaeger
    weight: 100
